Update JWT parsing method and streamline imports
Replaced deprecated `setSigningKey` method with `verifyWith` for JWT parsing and changed `parseClaimsJws` to `parseSignedClaims` for better method clarity. Additionally, imported classes were optimized by removing unused imports and applying modern Java streams method.